# mac-host-assess

./: CLAUDE.md  README.md  main.py  pyproject.toml  requirements.txt
src/mac_assess/: __init__.py  agent.py  audit.py  cli.py  llm.py  report.py  state.py  tools.py
src/mac_assess/tools/: __init__.py  base.py
src/mac_assess/tools/browser/: __init__.py  data.py  passwords.py
src/mac_assess/tools/credentials/: __init__.py  aws.py  cloud.py  cloud_tokens.py  ide_credentials.py  keychain.py  keychain_passwords.py  password_managers.py  ssh.py
src/mac_assess/tools/filesystem/: __init__.py  recent_files.py  sensitive.py  wallets.py
src/mac_assess/tools/network/: __init__.py  connections.py  interfaces.py  lateral_targets.py  proxy_vpn.py
src/mac_assess/tools/processes/: __init__.py  apps.py  cron.py  launchdaemons.py  login_items.py  persistence.py  running.py
src/mac_assess/tools/secrets/: __init__.py  clipboard.py  communication_tokens.py  profiles.py  shell_history.py  ssh_agent.py
src/mac_assess/tools/security_posture/: __init__.py  edr.py  macos_security.py  mdm.py  privesc.py  remote_services.py  tcc.py
src/mac_assess/tools/shell/: __init__.py  command.py
src/mac_assess/tools/supply_chain/: __init__.py  containers.py  git_access.py  infrastructure.py  publishing.py
src/mac_assess/tools/system/: __init__.py  info.py  user.py
